# Windows-Installations-Buddy

./: README.md
DU_CLI/: DU_CLI.sln
DU_CLI/DU_CLI/: DU_CLI.csproj  Program.cs  Utils.cs
GUI_MOCKUP/: Gaming Groupbox.txt  Programming Groupbox.txt
GUI_MOCKUP/WinStallBuddy/: Browser Groupbox.txt  CMakeLists.txt  Gaming Groupbox.txt  Programming Groupbox.txt  System Utilities Groupbox.txt  WinStallBuddy.qmlproject  WinStallBuddy.qmlproject.qtds  qds.cmake
GUI_MOCKUP/WinStallBuddy/App/autogen/: environment.h
GUI_MOCKUP/WinStallBuddy/WinStallBuddy/: CMakeLists.txt  Constants.qml  qmldir
GUI_MOCKUP/WinStallBuddy/WinStallBuddy/designer/: plugin.metainfo
GUI_MOCKUP/WinStallBuddy/WinStallBuddyContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
WinStallBuddy-Backend/: Cargo.toml
WinStallBuddy-Backend/src/: browser.rs  cmd.rs  system.rs
WinStallBuddy-Backend/src/not-used/: debug.rs
WinStallBuddy-Backend/win_stall_buddy/: config_backup.ini
WinStallBuddy-Backend/win_stall_buddy/src/: download.rs  gaming.rs  links.rs  main.rs  programming.rs  utils.rs
WinStallBuddy-Backend/win_stall_buddy/src/not-used/: backup.rs  deprecated.rs
