[package]
name = "wsb"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-ini = "0.21"
regex = "1.11.1"
reqwest = { version = "0.11", default-features=false, features = ["blocking", "gzip", "rustls-tls"] }
scraper = { version = "0.18"}
serde = "1.0.219"
serde_json = "1.0.140"
tl = "0.7.8"
tokio = { version = "1", features = ["full"] }
xmltojson = "0.1.3"
urlencoding = "2.1.3"
url = "2.5.4"
